// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={190}
      createdAt={0}
      description="Gym"
      id="1"
      key="1"
      notes=""
    />
    <ExpenseListItem
      amount={1000}
      createdAt={-345600000}
      description="Cable"
      id="2"
      key="2"
      notes=""
    />
    <ExpenseListItem
      amount={410}
      createdAt={345600000}
      description="Food"
      id="3"
      key="3"
      notes=""
    />
  </div>
</div>
`;

exports[`should render ExpenseList without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        You have no Expenses
      </span>
    </div>
  </div>
</div>
`;
